k8s/blue-green/02-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-bg
  namespace: gotasker
spec:
  selector:
    app: frontend-bg
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
